--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ footer-links:
   email: amirtorrez@openmailbox.org
   github: amirtorrez
   twitter: amirtorrez
+  telegram: amirtorrez
   facebook:
   dribbble:
   flickr:
