--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,7 @@ email:              amirtorrez@openmailbox.org
 twitter:            amirtorrez
 #facebook:           username
 github-url:         amirtorrez
+telegram:           amirtorrez
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
@@ -50,7 +51,7 @@ github-url:         amirtorrez
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam:              amirtorrez
+#steam:              amirtorrez
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
