--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ disqus_shortname:   amirtorrez
   #ad-slot:
 #bing-verify:
 email:              amirtorrez@openmailbox.org
-twitter:            amirtorrez
+#twitter:            amirtorrez
 #facebook:           username
 github-url:         amirtorrez
 telegram:           amirtorrez
