--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Amir Torrez
-bio:                'Estudiante, Desarrollador Web, Difusor de Software Libre, Geek y un tipo cualquiera'
+bio:                'Estudiante, Desarrollador Web, Difusor de Software Libre, Seguidor de FOSS, Geek y un tipo cualquiera'
 description:        "Portal web personal"
 reading_time:       true
 words_per_minute:   200
