--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,7 @@ gems:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-gist
+  - jekyll-paginate
 
 jekyll-mentions:
     base_url: https://amirtorrez.github.io
