--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ disqus_shortname:   amirtorrez
   #ad-client:
   #ad-slot:
 #bing-verify:
-email:              amirtorrez@openmailbox.org
+email:              amirtorrez@disroot.org
 #twitter:            amirtorrez
 #facebook:           username
 github-url:         amirtorrez
