--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ disqus_shortname:   amirtorrez
 email:              amirtorrez@disroot.org
 #twitter:            amirtorrez
 #facebook:           username
-dispora:            https://pod.disroot.org/u/amirtorrez
+diaspora:           https://pod.disroot.org/u/amirtorrez
 github-url:         amirtorrez
 telegram:           amirtorrez
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
