--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ telegram:           amirtorrez
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam:              amirtorrez
+#steam:              amirtorrez
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
