--- a/manifest.json
+++ b/manifest.json
@@ -5,10 +5,11 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#fff",
+  "theme_color": "#fff",
   "description": "A personal web site.",
   "icons": [{
     "src": "assets/img/icon.png",
-    "sizes": "159x156",
+    "sizes": "128x128 152x152",
     "type": "image/png"
   }]
 }
