--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "lang": "es",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#666",
+  "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "description": "A personal web site.",
   "icons": [{
