--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Amir Torrez!",
   "short_name": "AmirTorrez!",
   "lang": "es",
-  "start_url": ".",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
