--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/profile.jpg'
 background:         'assets/img/F15.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             es_MX
-url:                https://amirtorrez.github.io
+url:                https://amirtorrez.gitlab.io
 paginate:           2
 paginate_path:      "/blog/pag:num/"
 
